src/NKnife.TDMS/Externals/nilibddc.h

typedef DDCFile* DDCFileHandle;
typedef DDCChannelGroup* DDCChannelGroupHandle;
typedef DDCChannel* DDCChannelHandle;
int __stdcall DDC_GetFilePropertyString(DDCFileHandle file,
                                        const char* property,
                                        char value[],
                                        size_t valueSize);
int __stdcall DDC_CreateChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
                                                  const char* property,
                                                  unsigned char value);
int __stdcall DDC_CreateChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
                                                  const char* property,
                                                  short value);
int __stdcall DDC_CreateChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
                                                  const char* property,
                                                  long value);
int __stdcall DDC_CreateChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
                                                  const char* property,
                                                  float value);
int __stdcall DDC_CreateChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
                                                   const char* property,
                                                   double value);
int __stdcall DDC_CreateChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
                                                   const char* property,
                                                   const char* value);
int __stdcall DDC_SetChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               unsigned char value);
int __stdcall DDC_SetChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               short value);
int __stdcall DDC_SetChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               long value);
int __stdcall DDC_SetChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               float value);
int __stdcall DDC_SetChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
                                                const char* property,
                                                double value);
int __stdcall DDC_SetChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
                                                const char* property,
                                                const char* value);
int __stdcall DDC_GetChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               unsigned char* value);
int __stdcall DDC_GetChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               short* value);
int __stdcall DDC_GetChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               long* value);
int __stdcall DDC_GetChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
                                               const char* property,
                                               float* value);
int __stdcall DDC_GetChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
                                                const char* property,
                                                double* value);
int __stdcall DDC_GetChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
                                                const char* property,
                                                char value[],
                                                size_t valueSize);
int __stdcall DDC_CreateChannelPropertyUInt8(DDCChannelHandle channel,
                                             const char* property,
                                             unsigned char value);
int __stdcall DDC_CreateChannelPropertyInt16(DDCChannelHandle channel,
                                             const char* property,
                                             short value);
int __stdcall DDC_CreateChannelPropertyInt32(DDCChannelHandle channel,
                                             const char* property,
                                             long value);
int __stdcall DDC_CreateChannelPropertyFloat(DDCChannelHandle channel,
                                             const char* property,
                                             float value);
int __stdcall DDC_CreateChannelPropertyDouble(DDCChannelHandle channel,
                                              const char* property,
                                              double value);
int __stdcall DDC_CreateChannelPropertyString(DDCChannelHandle channel,
                                              const char* property,
                                              const char* value);
int __stdcall DDC_SetChannelPropertyUInt8(DDCChannelHandle channel,
                                          const char* property,
                                          unsigned char value);
int __stdcall DDC_SetChannelPropertyInt16(DDCChannelHandle channel,
                                          const char* property,
                                          short value);
int __stdcall DDC_SetChannelPropertyInt32(DDCChannelHandle channel,
                                          const char* property,
                                          long value);
int __stdcall DDC_SetChannelPropertyFloat(DDCChannelHandle channel,
                                          const char* property,
                                          float value);
int __stdcall DDC_SetChannelPropertyDouble(DDCChannelHandle channel,
                                           const char* property,
                                           double value);
int __stdcall DDC_SetChannelPropertyString(DDCChannelHandle channel,
                                           const char* property,
                                           const char* value);
int __stdcall DDC_GetChannelPropertyUInt8(DDCChannelHandle channel,
                                          const char* property,
                                          unsigned char* value);
int __stdcall DDC_GetChannelPropertyInt16(DDCChannelHandle channel,
                                          const char* property,
                                          short* value);
int __stdcall DDC_GetChannelPropertyInt32(DDCChannelHandle channel, const
                                          char* property,
                                          long* value);
int __stdcall DDC_GetChannelPropertyFloat(DDCChannelHandle channel,
                                          const char* property,
                                          float* value);
int __stdcall DDC_GetChannelPropertyDouble(DDCChannelHandle channel,
                                           const char* property,
                                           double* value);
int __stdcall DDC_GetChannelPropertyString(DDCChannelHandle channel,
                                           const char* property,
                                           char value[],
                                           size_t valueSize);